--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                         <a href="logistic-consultancy.html" class="dropdown-item">Logistic Consultancy</a>
                     </div>
                 </div>
-                <a href="" class="nav-item nav-link">Contact</a>
+                <a href="contact.html" class="nav-item nav-link">Contact Us</a>
             </div>
             <h4 class="m-0 pe-lg-5 d-none d-lg-block"><i class="fa fa-phone text-primary me-3"></i>+91 9969440593</h4>
         </div>
